--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <header>
     <h1>AI实现世界教育平等</h1>
-    <p>专业智能机器人解决方案提供商</p>
+    <p>专业AI教育，让每个孩子都能享受优质教育资源，智能机器人解决方案提供商</p>
   </header>
 
   <section id="about">
