--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>AI教育平等平台</title>
-  <link rel="stylesheet" href="/style.css">
+  <link rel="stylesheet" href="./style.css">
 </head>
 <body>
   <header>
@@ -29,7 +29,7 @@
   <section id="contact">
     <h2>联系我们</h2>
     <div class="wechat">
-      <img src="/wechat-qr.png" alt="微信公众号二维码">
+      <img src="./wechat-qr.png" alt="微信公众号二维码">
       <p>扫码关注我们的微信公众号</p>
     </div>
   </section>
@@ -38,6 +38,6 @@
     <p>© 2024 AI教育平等平台. 保留所有权利.</p>
   </footer>
 
-  <script src="/script.js"></script>
+  <script src="./script.js"></script>
 </body>
 </html>
