--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>AI教育平等平台</title>
+  <title>平等器(13D DAO)</title>
   <style>
 /* 基础样式 */
 body {
@@ -138,7 +138,7 @@ footer {
   </section>
 
   <footer>
-    <p>© 2024 AI教育平等平台. 保留所有权利.</p>
+    <p>© 2024 平等器(13D DAO). 保留所有权利.</p>
   </footer>
 
   <script>
