--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@ footer {
   <section id="contact">
     <h2>联系我们</h2>
     <div class="wechat">
-      <img src="./wechat-qr.png" alt="微信公众号二维码">
+      <img src="./wechat-gzh.png" alt="微信公众号二维码">
       <p>扫码关注我们的微信公众号</p>
     </div>
   </section>
