--- a/index.html
+++ b/index.html
@@ -111,14 +111,45 @@ footer {
 </head>
 <body>
   <header>
-    <h1>AI实现世界教育平等</h1>
-    <p>专业AI教育，让每个孩子都能享受优质教育资源，智能机器人解决方案提供商</p>
+    <h1>AI，具身机器迈向大同世界</h1>
+    <p>随着人工智能技术的飞速发展，具身机器人正逐步迈向一个更加和谐与共融的大同世界。</p>
   </header>
 
   <section id="about">
     <h2>关于我们</h2>
-    <p>我们致力于通过AI技术实现教育平等，提供专业的智能机器人和具身AI解决方案。</p>
-    <p>未来我们将转型为非营利性基金会，100%由基金会控制，持续推动教育公平事业。</p>
+    <p>AI生成高质量教育为基础，具身机器技术全民化，推动智能科技普惠发展。</p>
+    <p>未来我们将转型为非营利性基金会，100%由基金会控制，持续推动人类加速迈向更智能的未来。我们致力于通过技术创新和教育普及，让更多人受益于智能科技的发展。。</p>
+  </section>
+
+  <section id="philosophy">
+    <h2>我们的理念</h2>
+    <div class="philosophy-content">
+      <h3>认识世界</h3>
+      <p>我们通过经济模型理解世界，认识到信息的不完备性和模型的局限性。我们遵循从周期规律到微观博弈的决策逻辑，关注经济基础与上层建筑的相互作用，以及重要组织和集团的影响力。</p>
+      <ul>
+        <li>采用多维度经济模型，考虑参数权重和适用条件</li>
+        <li>遵循"周期规律→宏观规律→行业规律→微观博弈"的分析框架</li>
+        <li>深入研究主要经济体的发展历史和现状</li>
+        <li>关注重要组织和集团的政策制定和决策影响</li>
+      </ul>
+      
+      <h3>使用资本工具</h3>
+      <p>我们深入研究资本工具在不同经济环境下的表现，建立经济模型与资本工具的关系图谱。通过历史分析和沙盘推演，我们能够更好地把握资本工具的使用时机和方式，促进产业升级和社会进步。</p>
+      <ul>
+        <li>建立经济模型与资本工具的关联分析框架</li>
+        <li>通过历史数据验证模型的有效性</li>
+        <li>构建沙盘推演系统，预测不同经济环境下的资本工具表现</li>
+        <li>制定应对预案，提高决策的准确性和及时性</li>
+      </ul>
+      
+      <h3>使命愿景</h3>
+      <p>生产率工具的分配，生产关系的革命，人类真正文明的教化，从而为迎接人类的”共同社会”，”大同社会”，”理想国”，”共产主义社会”到来做理论探讨。</p>
+      <ul>
+        <li>1.机器智能时代，提高生产率的工具怎么分配才对世界更好。</li>
+        <li>2.生产关系不适应生产力的发展，区块链是否，怎样革命生产关系。</li>
+        <li>3.城市的“伪文明”到真正的高度文明，人类需要新的教化语境体系。</li>
+      </ul>
+    </div>
   </section>
 
   <section id="download">
