--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ header {
 }
 
 header h1 {
-  font-size: 2.5rem;
+  font-size: 2.2rem;
   margin-bottom: 10px;
 }
 
@@ -118,7 +118,7 @@ footer {
   <section id="about">
     <h2>关于我们</h2>
     <p>AI生成高质量教育为基础，具身机器技术全民化，推动智能科技普惠发展。</p>
-    <p>未来我们将转型为非营利性基金会，100%由基金会控制，持续推动人类加速迈向更智能的未来。我们致力于通过技术创新和教育普及，让更多人受益于智能科技的发展。。</p>
+    <p>未来我们将转型为非营利性基金会，100%由基金会控制，持续推动人类加速迈向更智能的未来。我们致力于通过技术创新和教育普及，让更多人受益于智能科技的发展。</p>
   </section>
 
   <section id="philosophy">
