--- a/index.html
+++ b/index.html
@@ -122,12 +122,12 @@ footer {
   </section>
 
   <section id="products">
-    <h2>13D DAO product-list</h2>
+    <h2>13D DAO PRODUCT-LIST</h2>
     <div class="product-list">
       <h3>13D DAO DFI</h3>
       <p>去中心化金融基础设施，构建全球金融新秩序</p>
       
-      <h3>13D DAO pingdengqi</h3>
+      <h3>13D DAO PINGDENGQI</h3>
       <p>AI 实现 快速完成基础教育，提升全球教育公平性，具身机器技术大众化，智能劳动力公平分配和普及。</p>
       
       <h3>13D DAO DC REMOTE WORK</h3>
