--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@ footer {
   <section id="download">
     <h2>下载APP</h2>
     <div class="download-links">
-      <a href="#" class="btn">Android 下载</a>
+      <a href="app-debug.apk" download class="btn">Android 下载</a>
       <a href="#" class="btn">iOS 下载</a>
     </div>
   </section>
