--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@ footer {
         </div>
         <div class="profile-content">
           <h3>陈海培</h3>
-          <p class="title">13D DAO创始人，独立开发者</p>
+          <p class="title">13D DAO 创始人</p>
           <p>曾就职于多家知名对冲基金，包括：</p>
           <ul class="experience-list">
             <li>三和宏信投资</li>
@@ -242,6 +242,7 @@ footer {
             <li>不繁私募</li>
             <li>复利维新</li>
           </ul>
+          <p>网络电子书著作《陈海培的资管世界：认识世界，借资本之力，改造世界》</p>
           <p class="summary">职业经历涵盖从下单员到量化交易员、量化基金经理，并曾担任60亿身家大佬私人助理。</p>
         </div>
       </div>
