--- a/index.html
+++ b/index.html
@@ -224,6 +224,9 @@ footer {
 
     <h2>团队介绍</h2>
     <div class="team-intro">
+      <div class="team-image">
+        <img src="./1.png" alt="团队照片">
+      </div>
       <div class="profile-grid">
         <div class="profile-image">
           <img src="./2.png" alt="陈海培">
@@ -250,14 +253,10 @@ footer {
 
     <h2>寻找合伙人</h2>
     <div class="partner-search">
-      <div class="partner-grid">
-        <div class="partner-image">
-          <img src="./1.png" alt="寻找合伙人">
-        </div>
-        <div class="partner-content">
-          <h3>加入我们</h3>
-          <p>我们正在寻找以下领域的合伙人：</p>
-          <ul class="partner-list">
+      <div class="partner-content">
+        <h3>加入我们</h3>
+        <p>我们正在寻找以下领域的合伙人：</p>
+        <ul class="partner-list">
             <li>
               <strong>技术合伙人</strong>
               <p>具备智能体、去中心化、区块链、AI基础、编程基础、具身智能等技术背景</p>
