--- a/index.html
+++ b/index.html
@@ -346,7 +346,8 @@ footer {
   </section>
 
   <section id="products">
-    <h2>13D DAO PRODUCT-LIST：如果我被暗杀，希望有人继续完成这一伟大使命，历史不会记住富豪排行榜，但绝不会忘记改变，推动世界进步的人。</h2>
+    <h2>13D DAO PRODUCT-LIST</h2>
+    <h2>如果我被暗杀，希望有人继续完成这一伟大使命，历史不会记住富豪排行榜，但绝不会忘记改变，推动世界进步的人。</h2>
     <div class="product-list">
       <h3>13D DAO-P0:gunxueqiu</h3> 
       <p>用AI实现金融经济0信息差,让世界再无投机，回归价投。</p>
@@ -387,7 +388,7 @@ footer {
       <h3>13D DAO-P12:d-ai-cosmicexploration</h3>
       <p>分布式，宇宙研究探索公司。</p>
     </div>
-    <h3>我们计划实现全球500个寡头或垄断企业的DC计划，推动经济民主化，去资本化进程。</h3>
+    <h3>我们计划实现全球500个寡头或垄断企业的D计划，推动经济民主化，去资本化进程。</h3>
   </section>
 
   <section id="philosophy">
