--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@ footer {
       <h3>13D DAO-P5:d-ai-workers</h3>
       <p>人工智能劳动力网络，推动生产力革命。</p>
       
-      <h3>13D DAO-P6:d-ai-gerationcontent</h3>
+      <h3>13D DAO-P6:d-ai-generatecontent</h3>
       <p>分布式人工智能生成内容</p>
       
       <h3>13D DAO-P7:d-ai-transport</h3>
