--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@ footer {
       <p>分布式生物医药，生物医药公平，拒绝垄断。</p>
 
       <h3>13D DAO-P12:d-ai-cosmicexploration</h3>
-      <p>分布式，宇宙研究探索公司。</p>
+      <p>分布式，宇宙研究探索。</p>
     </div>
     <h3>我们计划实现全球500个寡头或垄断企业的D计划，推动经济民主化，去资本化进程。</h3>
   </section>
