--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@ footer {
     <div class="product-list">
       <h3>13D DAO-P0:gunxueqiu</h3> 
       <p>用AI实现金融经济0信息差,让世界再无投机，回归价投。</p>
-      <!--
+      
       <h3>13D DAO-P1:pingdengqi</h3> 
       <p>AI 实现 快速完成基础教育，提升全球教育公平性，具身机器技术大众化，智能劳动力公平分配和普及。</p>
 
@@ -386,7 +386,7 @@ footer {
       <p>分布式生物医药，生物医药公平，拒绝垄断。</p>
 
       <h3>13D DAO-P12:d-ai-cosmicexploration</h3>
-      <p>分布式，宇宙研究探索。</p>-->
+      <p>分布式，宇宙研究探索。</p>
     </div>
     <h3>我们计划实现全球500个寡头或垄断企业的D计划，推动经济民主化，去资本化进程。</h3>
   </section>
