--- a/index.html
+++ b/index.html
@@ -34,6 +34,11 @@
             display: flex;
             justify-content: space-between;
             align-items: center;
+            position: sticky;
+            top: 0;
+            z-index: 1000;
+            background: linear-gradient(135deg, var(--primary), var(--secondary));
+            padding: 15px 0;
         }
         .logo {
             font-size: 24px;
@@ -163,7 +168,6 @@
     <header>
         <div class="container">
             <nav>
-                <div class="logo">13D DAO</div>
                 <div class="nav-links">
                     <a href="#about">关于我们</a>
                     <a href="#token">代币经济</a>
@@ -247,6 +251,10 @@
         <h2 class="section-title">生态项目</h2>
         <div class="projects">
             <div class="card">
+                <h3>13D DAO-P0: 金融平权</h3>
+                <p>让我们一起走资本压榨剩余价值的路，走CEX的路，走顶级私募策略的路，走顶级财团的路，让其无路可走。让世界金融，投资，理财，资产配置，通过无中心化存储，去中心化自治无去中心化终端，AI金融，实现金融平权。</p>
+            </div>
+            <div class="card">
                 <h3>13D DAO-P1: pingdengqi</h3>
                 <p>AI 实现快速完成基础教育，提升全球教育公平性，具身机器技术大众化，智能劳动力公平分配和普及。</p>
             </div>
@@ -300,7 +308,7 @@
     <section id="community" class="container">
         <h2 class="section-title">加入社区</h2>
         <div class="card">
-            <p>欢迎加入13D DAO社区，让我们一起走资本压榨剩余价值的路，走CEX的路，走顶级私募策略的路，走顶级财团的路，让其无路可走。</p>
+            <p>欢迎加入13D DAO社区，参与去中心化未来建设。</p>
             <div class="social-links">
                 <a href="https://discord.gg/8tpzQwfU" target="_blank">Discord</a>
                 <a href="https://x.com/pei_hai20167?t=hWIk2HYrqWH_wrflNeZjdQ&s=09" target="_blank">Twitter(X)</a>
