--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         body {
             font-family: 'Arial', sans-serif;
             margin: 0;
-            padding: 0;
+            padding: 75px 0 0; /* 补偿固定导航栏高度 */
             background-color: var(--dark);
             color: var(--light);
             line-height: 1.6;
@@ -174,15 +174,7 @@
 <body>
     <header>
         <div class="container">
-            <nav>
-                <div class="nav-links">
-                    <a href="#about">关于我们</a>
-                    <a href="#token">代币经济</a>
-                    <a href="#roadmap">融资路线</a>
-                    <a href="#projects">生态项目</a>
-                    <a href="#community">加入社区</a>
-                </div>
-            </nav>
+            <iframe src="navbar.html" frameborder="0" style="width:100%; height:60px;"></iframe>
         </div>
     </header>
 
